--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/eyegen_db
-spring.datasource.username=eyegen
-spring.datasource.password=eyegen1234
+spring.datasource.username=root
+spring.datasource.password=${DB_PASSWORD}
 
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
