feat: add config para prod

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=api-eyegen
 
-spring.profiles.active=dev
+spring.profiles.active=prod
 
 server.error.include-stacktrace=never
 
-
+api.security.token.secret=${JWT_SECRET}
